fix nav align

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2862,7 +2862,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 
   .ts-card__image {
     height: 15.625rem;
-  } */
+  } 
 
   .navbar.navbar-expand-xl .navbar-nav {
     align-items: center;
@@ -2973,7 +2973,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
     padding: 3.75rem;
   }
 
-  .navbar.navbar-expand-lg .navbar-nav {
+  .navbar.navbar-expand-sm .navbar-nav {
     align-items: center;
   }
 
